# LearnVIO

./: .gitignore  CMakeLists.txt  feature_track_node.cc  front_end_node.cc  landmark.txt  landmarks.txt  package.xml  poses.txt  theroy.md  theroy2.md  theroy3.md
camera/: camera_base.cc  camera_base.h  camera_factory.h  pinhole_camera.cc  pinhole_camera.h
config/: config_file.yml  learn_vio.rviz
include/: config.h  estimator.h  feature_track.h  log.h  tick.h  utils.h  visualizor.h
include/inertial/: inertial_factor.h  preintegrate.h
include/initial/: initial.h
include/util/: config.h  log.h  tick.h  utils.h
include/visual/: feature.h  frame.h  globalsfm.h  initial.h  margin_factor.h  project_factor.h  visual_init.h
launch/: feature_track.launch  vio.launch
protobuf/c++/: feature.pb.cc  feature.pb.h  frame.pb.cc  frame.pb.h  math.pb.cc  math.pb.h
protobuf/proto/: feature.proto  frame.proto  math.proto
python/: draw_matrix.py  draw_pose.py
src/: config.cc  estimator.cc  feature_track.cc  visualizor.cc
src/inertial/: preintegrate.cc
src/initial/: initial.cc
src/util/: config.cc  utils.cc
src/visual/: feature.cc  frame.cc  globalsfm.cc  initial.cc  margin_factor.cc  project_factor.cc  visual_init.cc
test/: CMakeLists.txt  test_preintegrate.cc  test_quaternion.cc  test_visual_factor.cc
